# pico2hubris

./: .gitignore  Cargo.toml  README.md  hubris-env.toml  justfile  openocd.cfg  rust-toolchain.toml
apps/: blinky-app.kdl  blinky-chip.kdl  gpio-blinky-app.kdl  heartbeat-app.kdl  ipc-pingpong-app.kdl  pingpong-app.kdl  pwm-fade-app.kdl  systick-heartbeat-app.kdl  uart-app.kdl  uart-chip.kdl  uart-echo-app.kdl
blinky/: Cargo.toml
blinky/src/: main.rs
chips/: rp2350.kdl
ping/src/: main.rs
pong/: Cargo.toml
tasks/blinky/: Cargo.toml
tasks/blinky/src/: main.rs
tasks/heartbeat/: Cargo.toml
tasks/heartbeat/src/: main.rs
tasks/ping/: Cargo.toml
tasks/ping/src/: main.rs
tasks/pong/: Cargo.toml
tasks/pong/src/: main.rs
tasks/pwm/: Cargo.toml
tasks/pwm/src/: main.rs  pwm.rs
tasks/uart/: Cargo.toml
tasks/uptime/: Cargo.toml
tasks/uptime/src/: main.rs
uart/: Cargo.toml
uart/src/: main.rs
