[package]
name = "ping"
version = "0.1.0"
edition = "2024"

[dependencies]
userlib = { workspace = true, features = ["no-panic"] }
hubris-task-slots = { workspace = true }

[target.'cfg(target_arch = "arm")'.dependencies]
cortex-m = { workspace = true, features = ["inline-asm"] }

[target.'cfg(target_arch = "riscv32")'.dependencies]
riscv = { workspace = true }

[[bin]]
name = "ping"
test = false
bench = false
